--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,5 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+build_flags = -Ofast
 
